--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -23,8 +23,8 @@
 
     - name: Set Repository URLs
       set_fact:
-        template_repository_url_with_token: https://msft-octodemobot:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
-        target_repository_url_with_token: https://msft-octodemobot:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
+        template_repository_url_with_token: https://x-access-token:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
+        target_repository_url_with_token: https://x-access-token:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
 
     - name: Clone template repository as mirror
