--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -7,6 +7,7 @@
         context: "{{ lookup('env', 'TERRAFORM_PARAMETERS_B64') | b64decode | from_json }}"
         github_template_token: "{{ lookup('env', 'GITHUB_TEMPLATE_TOKEN') }}"
         github_demo_token: "{{ lookup('env', 'GITHUB_DEMO_TOKEN') }}"
+        template_auth_header: "{{ lookup('env', 'GITHUB_AUTH_TEMPLATE_HEADER') }}"
 
     - name: Validate Context
       assert:
@@ -27,11 +28,12 @@
         template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}.git
         target_repository_url_with_token: https://x-access-token:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
-        basic_auth_token: "{{ ('x-access-token:' + github_template_token) | b64encode }}"
+        # basic_auth_token: "{{ ('x-access-token:' + github_template_token) | b64encode }}"
 
     - name: Clone template repository as mirror
       command:
-        cmd: 'git -c "http.extraHeader=Authorization: Basic {{ basic_auth_token }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
+        # cmd: 'git -c "http.extraHeader=Authorization: Basic {{ basic_auth_token }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
+        cmd: 'git --verbose -c "http.extraHeader={{ template_auth_header }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
 
     - name: Set target repo url
       command:
