Trying alternative credentials

--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -33,7 +33,7 @@
     - name: Clone template repository as mirror
       command:
         # cmd: 'git -c "http.extraHeader=Authorization: Basic {{ basic_auth_token }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
-        cmd: 'git --verbose -c "http.extraHeader={{ template_auth_header }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
+        cmd: 'git -c "http.extraHeader={{ template_auth_header }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
 
     - name: Set target repo url
       command:
