--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -8,6 +8,7 @@
         github_template_token: "{{ lookup('env', 'GITHUB_TEMPLATE_TOKEN') }}"
         github_demo_token: "{{ lookup('env', 'GITHUB_DEMO_TOKEN') }}"
         template_auth_header: "{{ lookup('env', 'GITHUB_AUTH_TEMPLATE_HEADER') }}"
+        demo_auth_header: "{{ lookup('env', 'GITHUB_AUTH_DEMO_HEADER') }}"
 
     - name: Validate Context
       assert:
@@ -27,27 +28,26 @@
         template_repository_url_with_token: https://x-access-token:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
         template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}.git
         target_repository_url_with_token: https://x-access-token:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
+        target_repository_url: https://github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
-        # basic_auth_token: "{{ ('x-access-token:' + github_template_token) | b64encode }}"
 
     - name: Clone template repository as mirror
       command:
-        # cmd: 'git -c "http.extraHeader=Authorization: Basic {{ basic_auth_token }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
         cmd: 'git -c "http.extraHeader={{ template_auth_header }}" clone --mirror {{ template_repository_url }} {{ working_directory }}'
 
     - name: Set target repo url
       command:
-        cmd: git remote set-url --push origin {{ target_repository_url_with_token }}
+        cmd: git remote set-url --push origin {{ target_repository_url }}
         chdir: '{{ working_directory }}'
 
     - name: Fetch the origin repo
       command:
-        cmd: git fetch -p origin
+        cmd: git -c "http.extraHeader={{ demo_auth_header }}" fetch -p origin
         chdir: '{{ working_directory }}'
 
     - name: Push repository files
       command:
-        cmd: git push --mirror
+        cmd: git -c "http.extraHeader={{ demo_auth_header }}" push --mirror
         chdir: '{{ working_directory }}'
 
     - name: Invoke Issue creation workflow
