--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -5,8 +5,10 @@
     - name: Parse Terraform Context
       set_fact:
         context: "{{ lookup('env', 'TERRAFORM_PARAMETERS_B64') | b64decode | from_json }}"
+
         github_template_token: "{{ lookup('env', 'GITHUB_TEMPLATE_TOKEN') }}"
         github_demo_token: "{{ lookup('env', 'GITHUB_DEMO_TOKEN') }}"
+
         template_auth_header: "{{ lookup('env', 'GITHUB_AUTH_TEMPLATE_HEADER') }}"
         demo_auth_header: "{{ lookup('env', 'GITHUB_AUTH_DEMO_HEADER') }}"
 
@@ -42,7 +44,7 @@
 
     - name: Fetch the origin repo
       command:
-        cmd: git -c "http.extraHeader={{ demo_auth_header }}" fetch -p origin
+        cmd: git -c "http.extraHeader={{ template_auth_header }}" fetch -p origin
         chdir: '{{ working_directory }}'
 
     - name: Push repository files
