--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -49,7 +49,8 @@
 
     - name: Push repository files
       command:
-        cmd: git -c "http.extraHeader={{ demo_auth_header }}" push --mirror
+        # cmd: git -c "http.extraHeader={{ demo_auth_header }}" push --mirror
+        cmd: git -c "http.extraHeader={{ demo_auth_header }}" push main
         chdir: '{{ working_directory }}'
 
     - name: Invoke Issue creation workflow
