reverting to main branch only

--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -50,7 +50,7 @@
     - name: Push repository files
       command:
         # cmd: git -c "http.extraHeader={{ demo_auth_header }}" push --mirror
-        cmd: git -c "http.extraHeader={{ demo_auth_header }}" push main
+        cmd: git -c "http.extraHeader={{ demo_auth_header }}" push origin main
         chdir: '{{ working_directory }}'
 
     - name: Invoke Issue creation workflow
