--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -61,6 +61,7 @@
           Authorization: bearer {{ github_demo_token }}
         body_format: json
         body:
+          enforce_admins: false
           required_status_checks:
             strict: false
             contexts: [
@@ -69,10 +70,12 @@
               "CodeQL",
               "Container Vulnerabilty Scan - app"
             ]
-            enforce_admins: false
-            required_pull_result_reviews:
-              dismiss_stale_reviews: true
-              required_approving_review_count: 1
+          required_pull_result_reviews:
+            dismiss_stale_reviews: true
+            required_approving_review_count: 1
+          restrictions:
+            users: []
+            teams: []
         status_code: 200
 
     - name: Invoke Issue creation workflow
