--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -2,7 +2,7 @@
 
 - hosts: localhost
   tasks:
-    - name: Parse Terraform Context
+    - name: Parse environment vars
       set_fact:
         context: "{{ lookup('env', 'TERRAFORM_PARAMETERS_B64') | b64decode | from_json }}"
 
@@ -24,12 +24,12 @@
 
           - github_template_token is defined
           - github_demo_token is defined
+          - template_auth_header is defined
+          - demo_auth_header is defined
 
     - name: Set Repository URLs
       set_fact:
-        template_repository_url_with_token: https://x-access-token:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
-        template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}.git
-        target_repository_url_with_token: https://x-access-token:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
+        template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
         target_repository_url: https://github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
 
