--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -78,6 +78,9 @@
             teams: []
         status_code: 200
 
+    # Need to retry here for a while to wait for GitHub to pick up the workflow files that we are pushing above...
+    # Ideally this would not be required, and it is not error free either, but until we can get back to being able
+    # to use templates, this is what we are stuck with for now - PM
     - name: Invoke Issue creation workflow
       uri:
         url: https://api.github.com/repos/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}/actions/workflows/initialize.yml/dispatches
@@ -89,3 +92,7 @@
         body:
           ref: "main"
         status_code: 204
+      register: invocation
+      until: 'invocation is not failed'
+      retires: 5
+      delay: 2
