--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -37,12 +37,14 @@
     - name: Set Repository URLs
       set_fact:
         template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
+        template_repository_url_with_token: https://x-access-token:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
         target_repository_url: https://github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
 
     - name: Clone template repository
       command:
-        cmd: 'git -c "http.extraHeader={{ template_auth_header }}" clone {{ template_repository_url }} {{ working_directory }}'
+        # cmd: 'git -c "http.extraHeader={{ template_auth_header }}" clone {{ template_repository_url }} {{ working_directory }}'
+        cmd: 'git clone {{ template_repository_url_with_token }} {{ working_directory }}'
 
     - name: Set target repo url
       command:
