--- a/.demo/scripts/ansible/post_repository_creation.yml
+++ b/.demo/scripts/ansible/post_repository_creation.yml
@@ -9,9 +9,6 @@
         github_template_token: "{{ lookup('env', 'WORKFLOW_GITHUB_TEMPLATE_ORGANIZATION_TOKEN') }}"
         github_demo_token: "{{ lookup('env', 'WORKFLOW_GITHUB_DEMO_ORGANIZATION_TOKEN') }}"
 
-        template_auth_header: "{{ lookup('env', 'WORKFLOW_AUTH_TEMPLATE_ORGANIZATION_HEADER') }}"
-        demo_auth_header: "{{ lookup('env', 'WORKFLOW_AUTH_DEMO_ORGANIZATION_HEADER') }}"
-
     - name: Validate Context
       assert:
         that:
@@ -28,17 +25,10 @@
           - github_demo_token is defined
           - (github_demo_token | length) > 0
 
-          - template_auth_header is defined
-          - (template_auth_header | length) > 0
-
-          - demo_auth_header is defined
-          - (demo_auth_header | length) > 0
-
     - name: Set Repository URLs
       set_fact:
-        template_repository_url: https://github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
         template_repository_url_with_token: https://x-access-token:{{ github_template_token }}@github.com/{{ context.github_context.template_repository.owner }}/{{ context.github_context.template_repository.repo }}
-        target_repository_url: https://github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
+        target_repository_url_with_token: https://x-access-token:{{ github_demo_token }}@github.com/{{ context.github_context.target_repository.owner }}/{{ context.github_context.target_repository.repo }}
         working_directory: template-repo
 
     - name: Clone template repository
@@ -48,7 +38,7 @@
 
     - name: Set target repo url
       command:
-        cmd: git remote set-url --push origin {{ target_repository_url }}
+        cmd: git remote set-url --push origin {{ target_repository_url_with_token }}
         chdir: '{{ working_directory }}'
 
     - name: Fetch the origin repo
