--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,35 +16,40 @@
         "onAutoForward": "notify"
       }
     },
-    "extensions": [
-      "ms-azuretools.vscode-docker",
-      "redhat.java",
-      "redhat.vscode-xml",
-      "redhat.vscode-yaml",
-      "vscjava.vscode-java-pack",
-      "dgileadi.java-decompiler"
-    ],
-    "settings": {
-      "terminal.integrated.profiles.linux": {
-        "bash": {
-          "path": "bash",
-          "icon": "terminal-bash"
-        }
+    "customizations": {
+      "vscode": {
+        "extensions": [
+          "vsls-contrib.codetour",
+          "GitHub.copilot",
+          "ms-azuretools.vscode-docker",
+          "redhat.java",
+          "redhat.vscode-xml",
+          "redhat.vscode-yaml",
+          "vscjava.vscode-java-pack",
+          "dgileadi.java-decompiler"
+        ]
       },
-      "java.project.importOnFirstTimeStartup": "automatic",
-      "java.configuration.updateBuildConfiguration": "automatic",
-      "java.server.launchMode": "Standard",
-      "java.test.message.hintForSetingDefaultConfig": false,
-      "maven.pomfile.autoUpdateEffectivePOM": true,
-      "telemetry.enableTelemetry": false,
-      "extensions.ignoreRecommendations": true
+      "settings": {
+        "terminal.integrated.profiles.linux": {
+          "bash": {
+            "path": "bash",
+            "icon": "terminal-bash"
+          }
+        },
+        "java.project.importOnFirstTimeStartup": "automatic",
+        "java.configuration.updateBuildConfiguration": "automatic",
+        "java.server.launchMode": "Standard",
+        "java.test.message.hintForSetingDefaultConfig": false,
+        "maven.pomfile.autoUpdateEffectivePOM": true,
+        "telemetry.enableTelemetry": false,
+        "extensions.ignoreRecommendations": true
+      }
     },
     "postCreateCommand": "mvn compile",
-  
+
     // https://docs.github.com/en/codespaces/setting-up-your-project-for-codespaces/setting-a-minimum-specification-for-codespace-machines
     "hostRequirements": {
       "cpus": 4,
       "memory": "8gb"
     }
   }
-  
